User can now write reviews. They are listed in recyclerviewer in business rating fragment.

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -26,7 +26,7 @@
         </activity>
         <activity android:name=".ui.home.normalAcc.MainPageActivity" />
         <activity android:name=".ui.home.businessAcc.MainPageBusinessActivity" />
-        <activity android:name=".ui.home.normalAcc.ContainerActivity" />
+        <activity android:name=".ui.home.normalAcc.viewpager.ContainerActivity" />
     </application>
 
 </manifest>
